--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ header {
 	padding: 1px;
 	color: white;
 	background-color:#99c0db;
+	text-align: center;
 }
 
-.description {
+.text {
 	font-family: "Open Sans", sans-serif;
 	font-size: medium;
     margin: 15px;
@@ -25,7 +26,7 @@ footer {
 	font-size: 8px;
 	padding: 1px;
 	color: white;
-	background-color:blue;
-	text-align: right;
+	background-color:blue;	
+	text-align: center;
 }
 
