Fix : sync the header and footer color

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
 	font-size: 8px;
 	padding: 1px;
 	color: white;
-	background-color:#99c0db;
+	background-color:blue;
 	text-align: center;
 }
 
